--- a/composer.json
+++ b/composer.json
@@ -2,24 +2,17 @@
     "name": "vizrex/laratrust-ingest",
     "description": "Utility package to ingest roles and permissions easily using command line.",
     "type": "laravel-package",
-    "repositories": [{
-        "type": "path",
-        "url": "../laraviz",
-        "options": {
-            "symlink": true
-        }
-    }],    
+    "licsense": "proprietary",
     "authors": [{
         "name": "Vizrex",
         "email": "laravel@vizrex.com"
     }],
     "require": {
         "php": ">=7.0.0",
-        "laravel/framework": "5.5.*",
         "maatwebsite/excel": "~2.1.0",
         "santigarcor/laratrust": "5.0.*",
         "illuminate/support": "~5",
-        "vizrex/laraviz": "dev-master"
+        "vizrex/laraviz": "~1"
     },
     "require-dev": {},
     "autoload": {
@@ -32,9 +25,6 @@
             "providers": [
                 "Vizrex\\LaratrustIngest\\LaratrustIngestProvider"
             ]
-        },
-        "branch-alias": {
-            "dev-master": "dev"
         }
     },
     "minimum-stability": "stable"
