--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     }],
     "require": {
         "php": ">=7.0.0",
-        "maatwebsite/excel": "~2.1.0",
+        "maatwebsite/excel": "~3.1.3",
         "santigarcor/laratrust": "5.0.*",
         "illuminate/support": "~5",
         "vizrex/laraviz": "~1"
@@ -27,5 +27,5 @@
             ]
         }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "stable"
 }
