--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "require": {
         "php": ">=7.2.0",
         "santigarcor/laratrust": "5.*",
-        "illuminate/support": "~6",
+        "illuminate/support": "~5.1|^6.0",
         "vizrex/laraviz": "~1"
     },
     "require-dev": {},
